--- a/code/coordinate_based_image_fitting.ipynb
+++ b/code/coordinate_based_image_fitting.ipynb
@@ -38,7 +38,7 @@
     "    torch.backends.cudnn.enabled = True\n",
     "    torch.backends.cudnn.benchmark = True\n",
     "    dtype = torch.cuda.FloatTensor\n",
-    "    os.environ['CUDA_VISIBLE_DEVICES'] = '3'\n",
+    "    os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
     "    print(\"num GPUs\",torch.cuda.device_count())\n",
     "else:\n",
     "    dtype = torch.FloatTensor"
@@ -487,7 +487,7 @@
    ],
    "source": [
     "total_steps = 1500\n",
-    "run_example(filename=\"./00011_TE_1744x1160.png\",\n",
+    "run_example(filename=\"00011_TE_1744x1160.png\",\n",
     "                outfilename=\"chili512\",\n",
     "                width=256,\n",
     "                scale_lr = 0.5)"
@@ -855,7 +855,7 @@
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "name": "explore_siren.ipynb",
+   "name": "coordinate_based_image_fitting.ipynb",
    "provenance": []
   },
   "kernelspec": {
